[tool.poetry]
name = "ceneton-texts-utils"
version = "0.1.0"
description = "Focuses on retrieving the transcribed texts from CENETON website and indexing these"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ceneton_texts_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.2.1"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
ct-utils = "ceneton_texts_utils.__main__:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
